tests/ui/impl-trait/call_method_on_inherent_impl.next.stderr
error[E0282]: type annotations needed
  --> $DIR/call_method_on_inherent_impl.rs:18:13
   |
LL |         let x = my_foo();
   |             ^
LL |
LL |         x.my_debug();
   |         - type must be known at this point
   |
help: consider giving `x` an explicit type
   |
LL |         let x: /* Type */ = my_foo();
   |              ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
